syntax="proto3";

package Auth;

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    string email = 1;
    string role = 2;
}

service AuthService {
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}
